package domain;

public class DomainObject {
	
	public DomainObject() {
		
	}
	
	public String getId() {
		return null;
	}
}